# turboseek

./: .gitignore  package.json
app/: page.tsx
app/api/getAnswer/: route.ts
app/api/getSimilarQuestions/: route.ts
app/api/getSources/: route.ts
components/: Footer.tsx  Hero.tsx
python/: Makefile  pyproject.toml
python/lumina/api/: main.py
python/lumina/core/: base.py
python/lumina/indexes/: full_text.py
python/lumina/ingestion/: sitemap.py
python/lumina/tools/confluence/: client.py
python/tests/: test_confluence.py  test_sitemap.py
utils/: TogetherAIStream.ts
