[tool.poetry]
name = "lumina"
version = "0.1.0"
description = ""
authors = ["Rafael Pierre <rafaelpierre@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}
lancedb = "^0.16.0"
lxml = "^5.3.0"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
